<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SigninFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/signin_etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableEnd="@drawable/ic_email_blue"
            android:background="@drawable/custom_edittext_rounded"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:textSize="@dimen/text_small"
            android:inputType="textEmailAddress"
            android:layout_marginVertical="@dimen/margin_small"
            android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/signin_etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:drawableEnd="@drawable/ic_lock_blue"
            android:background="@drawable/custom_edittext_rounded"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_med"
            android:inputType="textPassword"
            android:layout_below="@+id/signin_etEmail"/>
        <TextView
            android:id="@+id/signin_tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/text_error"
            android:paddingHorizontal="@dimen/margin_med"
            android:layout_below="@+id/signin_etPassword"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
        <Button
            android:id="@+id/signin_btnSignin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tab_sign_in"
            android:textColor="@color/white"
            android:background="@drawable/custom_button_blue"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/signin_tvError"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</FrameLayout>