<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_profile_toolbar"
            app:theme="@style/MyToolbarTheme"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/custom_toolbar"
            android:gravity="center_vertical"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/app_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_med"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:background="@drawable/custom_toolbar">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/img_med"
                    android:layout_height="@dimen/img_med"
                    android:src="@drawable/user"
                    app:civ_border_width="4dp"
                    app:civ_border_color="@color/border"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin">
                    <TextView
                        android:id="@+id/activity_profile_tvNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_big"
                        android:layout_marginBottom="@dimen/margin_med"/>
                    <Button
                        android:id="@+id/activity_profile_btnEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_profile"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_settings_white"
                        android:background="@drawable/custom_button_white"
                        android:paddingHorizontal="@dimen/activity_horizontal_margin"
                        android:layout_below="@+id/activity_profile_tvNama"/>
                </RelativeLayout>
            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.2"
                android:background="@color/bg_secondary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginVertical="@dimen/margin_small">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginBottom="@dimen/margin_small"/>
                        <TextView
                            android:id="@+id/activity_profile_tvEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="admin@mail.com"
                            android:textSize="@dimen/text_med"
                            android:textColor="@color/colorPrimary"
                            android:drawableLeft="@drawable/ic_email_blue"
                            android:drawablePadding="@dimen/activity_horizontal_margin"
                            android:layout_marginBottom="@dimen/margin_small"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/md_divider_black"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginVertical="@dimen/margin_small">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/telp"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginBottom="@dimen/margin_small"/>
                        <TextView
                            android:id="@+id/activity_profile_tvTelp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="+62-822-4544-3941"
                            android:textSize="@dimen/text_med"
                            android:textColor="@color/colorPrimary"
                            android:drawableLeft="@drawable/ic_smartphone_blue"
                            android:drawablePadding="@dimen/activity_horizontal_margin"
                            android:layout_marginBottom="@dimen/margin_small"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/md_divider_black"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginVertical="@dimen/margin_small">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginBottom="@dimen/margin_small"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Perempuan"
                            android:textSize="@dimen/text_med"
                            android:textColor="@color/colorPrimary"
                            android:drawableLeft="@drawable/ic_person_blue"
                            android:drawablePadding="@dimen/activity_horizontal_margin"
                            android:layout_marginBottom="@dimen/margin_small"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/md_divider_black"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginVertical="@dimen/margin_small">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ttl"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginBottom="@dimen/margin_small"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="1 Januari 1998"
                            android:textSize="@dimen/text_med"
                            android:textColor="@color/colorPrimary"
                            android:drawableLeft="@drawable/ic_date_blue"
                            android:drawablePadding="@dimen/activity_horizontal_margin"
                            android:layout_marginBottom="@dimen/margin_small"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/md_divider_black"/>
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginVertical="@dimen/activity_vertical_margin">
                        <Button
                            android:id="@+id/activity_profile_btnLogout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_button_blue"
                            android:textColor="@color/white"
                            android:text="@string/logout"/>
                    </RelativeLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/custom_main_background"
        app:headerLayout="@layout/navigation_drawer_header"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation_drawer_items" />
</android.support.v4.widget.DrawerLayout>