<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.UploadActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_upload_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/custom_toolbar"
        android:gravity="center_vertical"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|enterAlways"
        app:title="@string/app_name"
        app:theme="@style/MyToolbarTheme"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            app:layout_collapseMode="pin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/activity_detail_pesanan_ivIcon"
                    android:layout_width="@dimen/img_med"
                    android:layout_height="@dimen/img_med"
                    android:src="@drawable/ic_document"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="@dimen/activity_horizontal_margin">
                    <TextView
                        android:id="@+id/activity_upload_tvMitra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mitra"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/vt323"
                        android:textSize="@dimen/text_big"
                        android:singleLine="true"
                        android:layout_marginBottom="@dimen/margin_small"/>
                    <TextView
                        android:id="@+id/activity_upload_tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_category"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/vt323"
                        android:textSize="@dimen/text_big"
                        android:layout_marginBottom="@dimen/margin_small"/>
                    <TextView
                        android:id="@+id/activity_upload_tvDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Detail"/>
                    <TextView
                        android:id="@+id/activity_upload_tvHarga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@color/text_error"
                        android:text="Harga"
                        android:fontFamily="@font/vt323"
                        android:textSize="@dimen/text_big"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Upload file.."
                    android:textSize="@dimen/text_med"
                    android:textColor="@color/colorPrimary"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="@dimen/margin_med"
                    android:weightSum="3">
                    <EditText
                        android:id="@+id/activity_upload_etFile"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:hint="Your file here.."
                        android:textSize="@dimen/text_small"
                        android:gravity="center_vertical|start"
                        android:inputType="textMultiLine"
                        android:paddingHorizontal="@dimen/activity_horizontal_margin"
                        android:paddingVertical="@dimen/margin_med"
                        android:layout_marginRight="@dimen/margin_med"
                        android:focusable="false"
                        android:editable="false"
                        android:background="@drawable/custom_edittext_rounded"/>
                    <Button
                        android:id="@+id/activity_upload_btnBrowse"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Browse"
                        android:textColor="@color/white"
                        android:background="@drawable/custom_button_blue"/>
                </LinearLayout>
                <!--
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/custom_edittext_rounded"
                    android:layout_marginVertical="@dimen/margin_med"
                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
                    android:paddingVertical="@dimen/margin_med">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="choose file.."
                        android:textSize="@dimen/text_med"
                        android:drawableLeft="@drawable/ic_add_blue"
                        android:drawablePadding="@dimen/margin_small"
                        android:layout_marginVertical="@dimen/margin_small"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="choose file.."
                        android:textSize="@dimen/text_med"
                        android:drawableLeft="@drawable/ic_add_blue"
                        android:drawablePadding="@dimen/margin_small"
                        android:layout_marginVertical="@dimen/margin_small"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="choose file.."
                        android:textSize="@dimen/text_med"
                        android:drawableLeft="@drawable/ic_add_blue"
                        android:drawablePadding="@dimen/margin_small"
                        android:layout_marginVertical="@dimen/margin_small"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Or"
                    android:textSize="@dimen/text_med"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"
                    android:layout_marginVertical="@dimen/margin_med"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:hint="Insert link.."
                    android:textSize="@dimen/text_small"
                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
                    android:paddingVertical="@dimen/margin_med"
                    android:background="@drawable/custom_edittext_rounded"/>
                -->

                <EditText
                    android:id="@+id/activity_upload_etKeterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Keterangan.."
                    android:height="@dimen/img_med"
                    android:textSize="@dimen/text_small"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
                    android:paddingVertical="@dimen/margin_med"
                    android:layout_marginVertical="@dimen/margin_med"
                    android:focusable="false"
                    android:background="@drawable/custom_edittext_rounded"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginVertical="@dimen/activity_vertical_margin">
                    <Button
                        android:id="@+id/activity_upload_btnNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:textColor="@color/white"
                        android:background="@drawable/custom_button_blue"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>